@@ -91,7 +91,7 @@ uno::Reference<uno::XInterface> getRegistryProperties(const OUString & group,
 
 sal_Bool voikko_initialized = sal_False;
 
-int voikko_handle = 0;
+VoikkoHandle * voikkoHandle = 0;
 
 uno::Reference<voikko::PropertyManager> thePropertyManager = 0;
 
